libs/extractor/tests/snapshots/all_tests__extract_global_css_with_imports-3.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from \"@devup-ui/core\";\nglobalCss({\n  imports: [`@devup-ui/core/css/global3.css`, `@devup-ui/core/css/global4.css`]\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Import(
            ExtractImport {
                url: "@devup-ui/core/css/global3.css",
                file: "test.tsx",
            },
        ),
        Import(
            ExtractImport {
                url: "@devup-ui/core/css/global4.css",
                file: "test.tsx",
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
